<resources>
    <string name="app_name">國泰構音標記APP</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="checkbox1">塞音化</string>
    <string name="checkbox2">母音化</string>
    <string name="checkbox3">母音省略</string>
    <string name="checkbox4">舌前音化</string>
    <string name="checkbox5">舌根音化</string>
    <string name="checkbox6">不送氣音化</string>
    <string name="checkbox7">聲隨韻母</string>
    <string name="checkbox8">邊音化</string>
    <string name="checkbox9">齒間音</string>
    <string name="checkbox10">子音省略</string>
    <string name="checkbox11">擦音化</string>
    <string name="checkbox12">介音省略</string>
    <string name="checkbox13">塞擦音化</string>
    <string name="checkbox14">複韻母省略</string>
    <string name="checkbox15">其他</string>
    <string name="checkbox16">雜訊無法辨識</string>
    <string name="textFileName">k1_1_1_1.wav</string>
    <string name="textFileNumber">1 / 99</string>
    <string name="textClassName">塞擦音化</string>
    <string name="todo">TODO</string>
    <string name="wordcard03_01">大哭</string>
    <string name="wordcard03_01_1">大</string>
    <string name="wordcard03_01_2">哭</string>
    <string name="wordcard03_02">打鼓</string>
    <string name="wordcard03_02_1">打</string>
    <string name="wordcard03_02_2">鼓</string>
    <string name="wordcard03_03">積木</string>
    <string name="wordcard03_03_1">積</string>
    <string name="wordcard03_03_2">木</string>
    <string name="wordcard03_04">踏步</string>
    <string name="wordcard03_04_1">踏</string>
    <string name="wordcard03_04_2">步</string>
    <string name="wordcard03_05">吉他</string>
    <string name="wordcard03_05_1">吉</string>
    <string name="wordcard03_05_2">他</string>
    <string name="wordcard03_06">哈囉</string>
    <string name="wordcard03_06_1">哈</string>
    <string name="wordcard03_06_2">囉</string>
    <string name="wordcard03_07">內褲</string>
    <string name="wordcard03_07_1">內</string>
    <string name="wordcard03_07_2">褲</string>
    <string name="wordcard03_08">骨頭</string>
    <string name="wordcard03_08_1">骨</string>
    <string name="wordcard03_08_2">頭</string>
    <string name="wordcard04_01">頭髮</string>
    <string name="wordcard04_01_1">頭</string>
    <string name="wordcard04_01_2">髮</string>
    <string name="wordcard04_02">枇杷</string>
    <string name="wordcard04_02_1">枇</string>
    <string name="wordcard04_02_2">杷</string>
    <string name="wordcard04_03">旗子</string>
    <string name="wordcard04_03_1">旗</string>
    <string name="wordcard04_03_2">子</string>
    <string name="wordcard04_04">欺負</string>
    <string name="wordcard04_04_1">欺</string>
    <string name="wordcard04_04_2">負</string>
    <string name="wordcard04_05">擦藥</string>
    <string name="wordcard04_05_1">擦</string>
    <string name="wordcard04_05_2">藥</string>
    <string name="wordcard04_06">草莓</string>
    <string name="wordcard04_06_1">草</string>
    <string name="wordcard04_06_2">莓</string>
    <string name="wordcard04_07">走路</string>
    <string name="wordcard04_07_1">走</string>
    <string name="wordcard04_07_2">路</string>
    <string name="wordcard04fcdp_01">山上</string>
    <string name="wordcard04fcdp_01_1">山</string>
    <string name="wordcard04fcdp_01_2">上</string>
    <string name="wordcard04fcdp_02">綿羊</string>
    <string name="wordcard04fcdp_02_1">綿</string>
    <string name="wordcard04fcdp_02_2">羊</string>
    <string name="wordcard04fcdp_03">聲音</string>
    <string name="wordcard04fcdp_03_1">聲</string>
    <string name="wordcard04fcdp_03_2">音</string>
    <string name="wordcard04fcdp_04">星星</string>
    <string name="wordcard04fcdp_04_1">星</string>
    <string name="wordcard04fcdp_04_2">星</string>
    <string name="wordcard05_01">日歷</string>
    <string name="wordcard05_01_1">日</string>
    <string name="wordcard05_01_2">歷</string>
    <string name="wordcard05_02">蜘蛛</string>
    <string name="wordcard05_02_1">蜘</string>
    <string name="wordcard05_02_2">蛛</string>
    <string name="wordcard05_03">住宿</string>
    <string name="wordcard05_03_1">住</string>
    <string name="wordcard05_03_2">宿</string>
    <string name="wordcard05_04">洗手</string>
    <string name="wordcard05_04_1">洗</string>
    <string name="wordcard05_04_2">手</string>
    <string name="wordcard05_05">抽屜</string>
    <string name="wordcard05_05_1">抽</string>
    <string name="wordcard05_05_2">屜</string>
    <string name="wordcard05_06">下車</string>
    <string name="wordcard05_06_1">下</string>
    <string name="wordcard05_06_2">車</string>
    <string name="wordcard05_07">梳子</string>
    <string name="wordcard05_07_1">梳</string>
    <string name="wordcard05_07_2">子</string>
    <string name="wordcard05_08">吐司</string>
    <string name="wordcard05_08_1">吐</string>
    <string name="wordcard05_08_2">司</string>
    <string name="wordcardStopping_01">杯子</string>
    <string name="wordcardStopping_01_1">杯</string>
    <string name="wordcardStopping_01_2">子</string>
    <string name="wordcardStopping_02">不是</string>
    <string name="wordcardStopping_02_1">不</string>
    <string name="wordcardStopping_02_2">是</string>
    <string name="wordcardStopping_03">背包</string>
    <string name="wordcardStopping_03_1">背</string>
    <string name="wordcardStopping_03_2">包</string>
    <string name="wordcardStopping_04">抹布</string>
    <string name="wordcardStopping_04_1">抹</string>
    <string name="wordcardStopping_04_2">布</string>
    <string name="wordcardStopping_05">毛筆</string>
    <string name="wordcardStopping_05_1">毛</string>
    <string name="wordcardStopping_05_2">筆</string>
    <string name="wordcardStopping_06">拍手</string>
    <string name="wordcardStopping_06_1">拍</string>
    <string name="wordcardStopping_06_2">手</string>
    <string name="wordcardStopping_07">皮帶</string>
    <string name="wordcardStopping_07_1">皮</string>
    <string name="wordcardStopping_07_2">帶</string>
    <string name="wordcardStopping_08">屁股</string>
    <string name="wordcardStopping_08_1">屁</string>
    <string name="wordcardStopping_08_2">股</string>
    <string name="wordcardStopping_09">瀑布</string>
    <string name="wordcardStopping_09_1">瀑</string>
    <string name="wordcardStopping_09_2">布</string>
    <string name="wordcardStopping_10">跑步</string>
    <string name="wordcardStopping_10_1">跑</string>
    <string name="wordcardStopping_10_2">步</string>
    <string name="wordcardStopping_11">底片</string>
    <string name="wordcardStopping_11_1">底</string>
    <string name="wordcardStopping_11_2">片</string>
    <string name="wordcardStopping_12">載帽子</string>
    <string name="wordcardStopping_12_1">載</string>
    <string name="wordcardStopping_12_2">帽</string>
    <string name="wordcardStopping_12_3">子</string>
    <string name="wordcardStopping_13">口袋</string>
    <string name="wordcardStopping_13_1">口</string>
    <string name="wordcardStopping_13_2">袋</string>
    <string name="wordcardStopping_14">蝴蝶</string>
    <string name="wordcardStopping_14_1">蝴</string>
    <string name="wordcardStopping_14_2">蝶</string>
    <string name="wordcardStopping_15">大哥</string>
    <string name="wordcardStopping_15_1">大</string>
    <string name="wordcardStopping_15_2">哥</string>
    <string name="wordcardStopping_16">兔子</string>
    <string name="wordcardStopping_16_1">兔</string>
    <string name="wordcardStopping_16_2">子</string>
    <string name="wordcardStopping_17">拖把</string>
    <string name="wordcardStopping_17_1">拖</string>
    <string name="wordcardStopping_17_2">把</string>
    <string name="wordcardStopping_18">脫掉</string>
    <string name="wordcardStopping_18_1">脫</string>
    <string name="wordcardStopping_18_2">掉</string>
    <string name="wordcardStopping_19">海苔</string>
    <string name="wordcardStopping_19_1">海</string>
    <string name="wordcardStopping_19_2">苔</string>
    <string name="wordcardStopping_20">頭髮</string>
    <string name="wordcardStopping_20_1">頭</string>
    <string name="wordcardStopping_20_2">髮</string>
    <string name="wordcardBacking_01">果凍</string>
    <string name="wordcardBacking_01_1">果</string>
    <string name="wordcardBacking_01_2">凍</string>
    <string name="wordcardBacking_02">排骨</string>
    <string name="wordcardBacking_02_1">排</string>
    <string name="wordcardBacking_02_2">骨</string>
    <string name="wordcardBacking_03">骨頭</string>
    <string name="wordcardBacking_03_1">骨</string>
    <string name="wordcardBacking_03_2">頭</string>
    <string name="wordcardBacking_04">櫃子</string>
    <string name="wordcardBacking_04_1">櫃</string>
    <string name="wordcardBacking_04_2">子</string>
    <string name="wordcardBacking_05">鍋子</string>
    <string name="wordcardBacking_05_1">鍋</string>
    <string name="wordcardBacking_05_2">子</string>
    <string name="wordcardBacking_06">牙膏</string>
    <string name="wordcardBacking_06_1">牙</string>
    <string name="wordcardBacking_06_2">膏</string>
    <string name="wordcardBacking_07">熱狗</string>
    <string name="wordcardBacking_07_1">熱</string>
    <string name="wordcardBacking_07_2">狗</string>
    <string name="wordcardBacking_08">西瓜</string>
    <string name="wordcardBacking_08_1">西</string>
    <string name="wordcardBacking_08_2">瓜</string>
    <string name="wordcardBacking_09">姑姑</string>
    <string name="wordcardBacking_09_1">姑</string>
    <string name="wordcardBacking_09_2">姑</string>
    <string name="wordcardBacking_10">烏龜</string>
    <string name="wordcardBacking_10_1">烏</string>
    <string name="wordcardBacking_10_2">龜</string>
    <string name="wordcardBacking_11">咖啡</string>
    <string name="wordcardBacking_11_1">咖</string>
    <string name="wordcardBacking_11_2">啡</string>
    <string name="wordcardBacking_12">咳嗽</string>
    <string name="wordcardBacking_12_1">咳</string>
    <string name="wordcardBacking_12_2">嗽</string>
    <string name="wordcardBacking_13">苦瓜</string>
    <string name="wordcardBacking_13_1">苦</string>
    <string name="wordcardBacking_13_2">瓜</string>
    <string name="wordcardBacking_14">褲子</string>
    <string name="wordcardBacking_14_1">褲</string>
    <string name="wordcardBacking_14_2">子</string>
    <string name="wordcardBacking_15">扣子</string>
    <string name="wordcardBacking_15_1">扣</string>
    <string name="wordcardBacking_15_2">子</string>
    <string name="wordcardBacking_16">可愛</string>
    <string name="wordcardBacking_16_1">可</string>
    <string name="wordcardBacking_16_2">愛</string>
    <string name="wordcardBacking_17">筷子</string>
    <string name="wordcardBacking_17_1">筷</string>
    <string name="wordcardBacking_17_2">子</string>
    <string name="wordcardBacking_18">體育課</string>
    <string name="wordcardBacking_18_1">體</string>
    <string name="wordcardBacking_18_2">育</string>
    <string name="wordcardBacking_18_3">課</string>
    <string name="wordcardBacking_19">貝殼</string>
    <string name="wordcardBacking_19_1">貝</string>
    <string name="wordcardBacking_19_2">殼</string>
    <string name="wordcardBacking_20">雞塊</string>
    <string name="wordcardBacking_20_1">雞</string>
    <string name="wordcardBacking_20_2">塊</string>
    <string name="wordcardAffricate_01">橘子</string>
    <string name="wordcardAffricate_01_1">橘</string>
    <string name="wordcardAffricate_01_2">子</string>
    <string name="wordcardAffricate_02">指甲</string>
    <string name="wordcardAffricate_02_1">指</string>
    <string name="wordcardAffricate_02_2">甲</string>
    <string name="wordcardAffricate_03">炸雞</string>
    <string name="wordcardAffricate_03_1">炸</string>
    <string name="wordcardAffricate_03_2">雞</string>
    <string name="wordcardAffricate_04">腳踏車</string>
    <string name="choClass">請選擇類別</string>
    <string name="jumpTo">跳轉至…</string>
</resources>